--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -37,3 +37,7 @@
     bottom: 0;
   }
 }
+
+#main-content-wrapper {
+  overflow: hidden;
+}
